@@ -182,6 +182,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       return value of the executed function/command, not that of "typeset".
     - deduplicate.sh: add WARNING to status message.
     - deduplicate.sh: remove some noisy debug output.
+    - macbuild.sh: replace tabs with two spaces. No functional changes.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
